# coop-sql-review

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PUBLISHING.md  README.md  RULES.md  SPEC.md  pyproject.toml  test.py
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: standards-proposed-additions.md  standards.md
scripts/: release_check.py
src/coop_sql_review/: __init__.py  __main__.py  catalog_builder.py  cli.py  comparison.py  diagnostics.py  engine.py  finding.py  identifiers.py  parser.py  progress.py  report.py  sql_common.py  sql_model.py  standards.py  suppressions.py  upgrade.py
src/coop_sql_review/rules/: __init__.py  base.py  custom.py  helpers.py  sql_alias_descriptive.py  sql_bronze_raw_names.py  sql_ctas_explicit_cast.py  sql_cte_prefix.py  sql_date_filter_param.py  sql_distinct_smell.py  sql_exists_comment.py  sql_exists_why_quality.py  sql_filter_upstream.py  sql_header_comment.py  sql_implicit_convert.py  sql_insert_alias_match.py  sql_join_filter.py  sql_narrowing_cast.py  sql_no_alter_column.py  sql_no_select_star.py  sql_order_by_in_view.py  sql_prefer_cte.py  sql_query_label.py  sql_sargability.py  sql_scd2_correct.py  sql_silver_pascalcase.py  sql_singleton_insert.py  sql_table_layer_name.py  sql_try_cast_bronze.py  sql_txn_short.py  (+6 more)
tests/: conftest.py  test_agent_rules.py  test_alias_descriptive.py  test_cli.py  test_cli_changed.py  test_cli_compare.py  test_comment_rules.py  test_core_wiring.py  test_corpus.py  test_ctas_explicit_cast.py  test_cte_prefix.py  test_custom_rules.py  test_date_filter_param.py  test_determinism.py  test_diagnostics.py  test_diff_against.py  test_dynamic_sql.py  test_engine.py  test_estate_catalog.py  test_explain.py  test_fingerprint_identity.py  test_helpers.py  test_identifiers.py  test_insert_alias_match.py  test_join_filter.py  test_main_entrypoint.py  test_narrowing_cast.py  test_no_alter_column.py  test_no_select_star.py  test_parser.py  test_prefer_cte.py  test_proc_body_ddl.py  test_proposed_a.py  test_proposed_b.py  test_query_label.py  test_regressions.py  test_report.py  test_silver_pascalcase.py  test_singleton_insert.py  test_standards.py  (+8 more)
tests/fixtures/: proc_body_ddl.sql  realistic_estate.sql  select_star.sql
tmp_debug/: proc.sql
