[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coop-sql-review"
dynamic = ["version"]   # single-sourced from src/coop_sql_review/__init__.py (see [tool.hatch.version])
description = "Offline, advisory SQL standards linter for Microsoft Fabric Data Warehouse: parses .sql files and reports anything that doesn't match the team's SQL standards. Human report + machine JSON for the company agent. Never edits or blocks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aaron Jennings" }]
keywords = ["sql", "linter", "fabric", "data-warehouse", "tsql", "standards"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "coop-review-core>=0.2.0",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    # Floor at 26: the parser relies on the >=26 NotNullColumnConstraint
    # `allow_null` semantics (25.x is inverted -> wrong column nullability).
    # Cap below the next major past the verified one (30.x) to avoid silent breaks.
    "sqlglot>=26,<31",
    "click>=8.1",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
coop-sql-review = "coop_sql_review.cli:main"

[project.urls]
Homepage = "https://github.com/kabukisensei/coop-sql-review"

[tool.hatch.version]
path = "src/coop_sql_review/__init__.py"   # the single source of truth for the version

[tool.hatch.build.targets.wheel]
packages = ["src/coop_sql_review"]

[tool.hatch.build]
# Ship the bundled standards (so `check` works with no --standards) and the
# logo (for the branded HTML report).
include = ["src/coop_sql_review/**/*.py", "src/coop_sql_review/data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
